--- a/src/RisingSun/RisingSunForm.css
+++ b/src/RisingSun/RisingSunForm.css
@@ -111,6 +111,12 @@ form {
   font-size: 0.625rem;
 }
 
+.c-bounty-rising-sun-form__tandc {
+  font-size: 0.625rem;
+  text-decoration: underline;
+  color: #000000;
+}
+
 @media (max-width: 50em) {
   .c-bounty-rising-sun-form {
     left: 0;
@@ -301,6 +307,12 @@ form {
 
 .c-who-rising-sun-form__copy {
   font-size: 10px;
+}
+
+.c-who-rising-sun-form__tandc {
+  font-size: 10px;
+  text-decoration: underline;
+  color: #000000;
 }
 
 @media (max-width: 50em) {
@@ -1647,6 +1659,12 @@ form {
   font-size: 10px;
 }
 
+.c-marieclaire-rising-sun-form__tandc {
+  font-size: 10px;
+  text-decoration: underline;
+  color: #000000;
+}
+
 @media (max-width: 50em) {
   .c-marieclaire-rising-sun-form {
     left: 0;
@@ -1743,7 +1761,7 @@ form {
   content: " ";
   height: 1.4rem;
   width: 4px;
-  background-color: #4e9c8c;
+  background-color: #002355;
 }
 
 .c-nowtolove-close-icon:before {
@@ -1805,7 +1823,7 @@ form {
 .c-nowtolove-rising-sun-form__heading {
   margin: 0;
   margin-bottom: 2.563rem;
-  color: #4e9c8c;
+  color: #002355;
   font-size: 1.875rem;
   font-weight: 700;
 }
@@ -1824,7 +1842,7 @@ form {
 }
 
 .c-nowtolove-rising-sun-form__submit {
-  background-color: #7cbfb1;
+  background-color: #002355;
   border: none;
   border-radius: 3px;
   color: #ffffff;
@@ -1837,6 +1855,12 @@ form {
 
 .c-nowtolove-rising-sun-form__copy {
   font-size: 0.625rem;
+}
+
+.c-nowtolove-rising-sun-form__tandc {
+  font-size: 10px;
+  text-decoration: underline;
+  color: #000000;
 }
 
 @media (max-width: 50em) {
@@ -1894,7 +1918,7 @@ form {
 .c-nowtolove-successful-rising-sun__heading {
   margin: 0;
   margin-bottom: 2.563rem;
-  color: #4e9c8c;
+  color: #002355;
   font-size: 1.875rem;
   font-weight: 700;
 }
@@ -1906,7 +1930,7 @@ form {
 }
 
 button.c-nowtolove-successful-rising-sun__submit {
-  background-color: #7cbfb1;
+  background-color: #002355;
   border: none;
   border-radius: 3px;
   color: #ffffff;
@@ -2029,6 +2053,12 @@ form {
 
 .c-newidea-rising-sun-form__copy {
   font-size: 10px;
+}
+
+.c-newidea-rising-sun-form__tandc {
+  font-size: 10px;
+  text-decoration: underline;
+  color: #000000;
 }
 
 @media (max-width: 50em) {
@@ -2223,6 +2253,12 @@ form {
   font-size: 0.625rem;
 }
 
+.c-gourmettraveller-rising-sun-form__tandc {
+  font-size: 0.625rem;
+  text-decoration: underline;
+  color: #000000;
+}
+
 @media (max-width: 50em) {
   .c-gourmettraveller-rising-sun-form {
     left: 0;
@@ -2409,6 +2445,12 @@ button.c-gourmettraveller-successful-rising-sun__submit {
 
 .c-awwfood-rising-sun-form__copy {
   font-size: 0.625rem;
+}
+
+.c-awwfood-rising-sun-form__tandc {
+  font-size: 0.625rem;
+  text-decoration: underline;
+  color: #000000;
 }
 
 @media (max-width: 50em) {
