--- a/src/RisingSun/RisingSunForm.css
+++ b/src/RisingSun/RisingSunForm.css
@@ -66,32 +66,32 @@ form {
 .c-bounty-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   justify-content: center;
   margin: 0 auto;
   max-width: 50%;
-  padding: 3.125rem;
+  padding: 10px;
   text-align: center;
 }
 
 .c-bounty-rising-sun-form__heading {
   color: #ff5000;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   margin: 0;
 }
 
 .c-bounty-rising-sun-form__sub-heading {
-  font-size: 1rem;
-  margin-bottom: 1.875rem;
+  font-size: 16px;
+  padding-bottom: 10px;
   margin: 0;
 }
 
 .c-bounty-rising-sun-form__input {
   border: 1px solid #f0f1f3;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   text-align: center;
 }
 
@@ -101,9 +101,9 @@ form {
   border: none;
   color: #ffff;
   cursor: pointer;
-  font-size: 0.875rem;
-  margin-bottom: 1.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  margin-bottom: 10px;
+  padding: 12px;
   text-transform: uppercase;
 }
 
@@ -264,11 +264,11 @@ form {
 .c-who-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   justify-content: center;
   margin: 0 auto;
   max-width: 50%;
-  padding: 50px;
+  padding: 10px;
   text-align: center;
 }
 
@@ -276,13 +276,13 @@ form {
   color: #202020;
   font-size: 30px;
   font-weight: 700;
-  margin-bottom: 40px;
+  padding: 10px;
   margin: 0;
 }
 
 .c-who-rising-sun-form__sub-heading {
   font-size: 16px;
-  margin-bottom: 30px;
+  padding-bottom: 10px;
   margin: 0;
 }
 
@@ -300,7 +300,7 @@ form {
   color: #ffff;
   cursor: pointer;
   font-size: 14px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   padding: 12px;
   text-transform: uppercase;
 }
@@ -345,12 +345,12 @@ form {
 .c-who-successful-rising-sun-pop-up__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 10px;
 }
 
 .c-who-successful-rising-sun__overlay {
@@ -369,7 +369,7 @@ form {
 
 .c-who-successful-rising-sun__heading {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   color: #2ae3d8;
   font-size: 30px;
   font-weight: 700;
@@ -377,7 +377,7 @@ form {
 
 .c-who-successful-rising-sun__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font-size: 16px;
 }
 
@@ -390,7 +390,7 @@ button.c-who-successful-rising-sun__submit {
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
@@ -462,32 +462,32 @@ form {
 .c-elle-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 10px;
 }
 
 .c-elle-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   color: #202020;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .c-elle-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 1.875rem;
-  font-size: 1rem;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 
 .c-elle-rising-sun-form__input {
   text-align: center;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   border: 1px solid #f0f1f3;
 }
 
@@ -496,11 +496,11 @@ form {
   border: none;
   border-radius: 3px;
   color: #ffff;
-  font-size: 0.875rem;
+  font-size: 14px;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.8rem;
-  margin-bottom: 1.875rem;
+  padding: 12px;
+  margin-bottom: 10px;
 }
 
 .c-elle-rising-sun-form__copy {
@@ -654,45 +654,45 @@ form {
 .c-homestolove-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 10px;
 }
 
 .c-homestolove-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   color: #202020;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .c-homestolove-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 1.875rem;
-  font-size: 1rem;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 
 .c-homestolove-rising-sun-form__input {
   text-align: center;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   border: 1px solid #f0f1f3;
 }
 
 .c-homestolove-rising-sun-form__submit {
   background-color: #4e9c8c;
   border: none;
-  border-radius: 3px;
+  border-radius: 6px;
   color: #ffff;
-  font-size: 0.875rem;
+  font-size: 14px;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.8rem;
-  margin-bottom: 1.875rem;
+  padding: 12px;
+  margin-bottom: 10px;
 }
 
 .c-homestolove-rising-sun-form__copy {
@@ -846,17 +846,17 @@ form {
 .c-homebeautiful-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 10px;
 }
 
 .c-homebeautiful-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 40px;
+  padding: 10px;
   color: #202020;
   font-size: 30px;
   font-weight: 700;
@@ -864,7 +864,7 @@ form {
 
 .c-homebeautiful-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
+  padding-bottom: 10px;
   font-size: 16px;
 }
 
@@ -884,7 +884,7 @@ form {
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .c-homebeautiful-rising-sun-form__copy {
@@ -1038,32 +1038,32 @@ form {
 .c-beautyheaven-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 10px;
 }
 
 .c-beautyheaven-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   color: #2b1e68;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .c-beautyheaven-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 1.875rem;
-  font-size: 1rem;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 
 .c-beautyheaven-rising-sun-form__input {
   text-align: center;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   border: 1px solid #f0f1f3;
 }
 
@@ -1072,11 +1072,11 @@ form {
   border: none;
   border-radius: 3px;
   color: #aa276f;
-  font-size: 0.875rem;
+  font-size: 14px;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.8rem;
-  margin-bottom: 1.875rem;
+  padding: 12px;
+  margin-bottom: 10px;
 }
 
 .c-beautyheaven-rising-sun-form__copy {
@@ -1230,17 +1230,17 @@ form {
 .c-betterhomesandgardens-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 10px;
 }
 
 .c-betterhomesandgardens-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 40px;
+  padding: 10px;
   color: #5198d1;
   font-size: 30px;
   font-weight: 700;
@@ -1248,7 +1248,7 @@ form {
 
 .c-betterhomesandgardens-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
+  padding-bottom: 10px;
   font-size: 16px;
 }
 
@@ -1260,15 +1260,15 @@ form {
 }
 
 .c-betterhomesandgardens-rising-sun-form__submit {
-  background-color: #f7eaf1;
+  background-color: #5198d1;
   border: none;
   border-radius: 6px;
-  color: #5198d1;
+  color: #ffffff;
   font-size: 14px;
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .c-betterhomesandgardens-rising-sun-form__copy {
@@ -1422,17 +1422,17 @@ form {
 .c-beautycrew-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 10px;
 }
 
 .c-beautycrew-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 40px;
+  padding: 10px;
   color: #333333;
   font-size: 30px;
   font-weight: 700;
@@ -1440,7 +1440,7 @@ form {
 
 .c-beautycrew-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
+  padding-bottom: 10px;
   font-size: 16px;
 }
 
@@ -1460,7 +1460,7 @@ form {
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .c-beautycrew-rising-sun-form__copy {
@@ -1614,17 +1614,17 @@ form {
 .c-marieclaire-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 10px;
 }
 
 .c-marieclaire-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 40px;
+  padding: 10px;
   color: #262626;
   font-size: 30px;
   font-weight: 700;
@@ -1632,7 +1632,7 @@ form {
 
 .c-marieclaire-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
+  padding-bottom: 10px;
   font-size: 16px;
 }
 
@@ -1652,7 +1652,7 @@ form {
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .c-marieclaire-rising-sun-form__copy {
@@ -1812,32 +1812,32 @@ form {
 .c-nowtolove-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 10px;
 }
 
 .c-nowtolove-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   color: #002355;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .c-nowtolove-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 1.875rem;
-  font-size: 1rem;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 
 .c-nowtolove-rising-sun-form__input {
   text-align: center;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   border: 1px solid #f0f1f3;
 }
 
@@ -1846,11 +1846,11 @@ form {
   border: none;
   border-radius: 3px;
   color: #ffffff;
-  font-size: 0.875rem;
+  font-size: 14px;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.8rem;
-  margin-bottom: 1.875rem;
+  padding: 12px;
+  margin-bottom: 10px;
 }
 
 .c-nowtolove-rising-sun-form__copy {
@@ -2010,26 +2010,26 @@ form {
 .c-newidea-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 10px;
 }
 
 .c-newidea-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 40px;
   color: #fa29d8;
   font-size: 30px;
   font-weight: 700;
+  padding: 10px;
 }
 
 .c-newidea-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
   font-size: 16px;
+  padding-bottom: 10px;
 }
 
 .c-newidea-rising-sun-form__input {
@@ -2048,7 +2048,6 @@ form {
   text-transform: uppercase;
   cursor: pointer;
   padding: 12px;
-  margin-bottom: 30px;
 }
 
 .c-newidea-rising-sun-form__copy {
@@ -2096,7 +2095,7 @@ form {
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 50px;
+  padding: 20px;
 }
 
 .c-newidea-successful-rising-sun__overlay {
@@ -2115,7 +2114,7 @@ form {
 
 .c-newidea-successful-rising-sun__heading {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   color: #fa29d8;
   font-size: 30px;
   font-weight: 700;
@@ -2123,7 +2122,6 @@ form {
 
 .c-newidea-successful-rising-sun__sub-heading {
   margin: 0;
-  margin-bottom: 30px;
   font-size: 16px;
 }
 
@@ -2147,16 +2145,16 @@ form {
 }
 
 .c-gourmettraveller-close-icon {
-  width: 2rem;
-  height: 2rem;
+  width: 13px;
+  height: 12px;
 }
 
 .c-gourmettraveller-close-icon:before,
 .c-gourmettraveller-close-icon:after {
   position: absolute;
   content: " ";
-  height: 1.4rem;
-  width: 4px;
+  height: 12px;
+  width: 2px;
   background-color: #000000;
 }
 
@@ -2178,8 +2176,8 @@ form {
   background-color: #fff;
   border: none;
   cursor: pointer;
-  right: 1rem;
-  top: 1rem;
+  right: 16px;
+  top: 16px;
 }
 
 .c-gourmettraveller-rising-sun-form {
@@ -2208,32 +2206,32 @@ form {
 .c-gourmettraveller-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 10px;
 }
 
 .c-gourmettraveller-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   color: #000000;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .c-gourmettraveller-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 1.875rem;
-  font-size: 1rem;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 
 .c-gourmettraveller-rising-sun-form__input {
   text-align: center;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   border: 1px solid #f0f1f3;
 }
 
@@ -2245,8 +2243,7 @@ form {
   font-size: 0.875rem;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.8rem;
-  margin-bottom: 1.875rem;
+  padding: 12px;
 }
 
 .c-gourmettraveller-rising-sun-form__copy {
@@ -2294,7 +2291,7 @@ form {
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 20px;
 }
 
 .c-gourmettraveller-successful-rising-sun__overlay {
@@ -2402,32 +2399,32 @@ button.c-gourmettraveller-successful-rising-sun__submit {
 .c-awwfood-rising-sun-form__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 12px;
   text-align: center;
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 10px;
 }
 
 .c-awwfood-rising-sun-form__heading {
   margin: 0;
-  margin-bottom: 2.563rem;
+  padding: 10px;
   color: #000000;
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .c-awwfood-rising-sun-form__sub-heading {
   margin: 0;
-  margin-bottom: 1.875rem;
-  font-size: 1rem;
+  padding-bottom: 10px;
+  font-size: 16px;
 }
 
 .c-awwfood-rising-sun-form__input {
   text-align: center;
-  font-size: 0.875rem;
-  padding: 0.8rem;
+  font-size: 14px;
+  padding: 12px;
   border: 1px solid #f0f1f3;
 }
 
@@ -2436,15 +2433,14 @@ button.c-gourmettraveller-successful-rising-sun__submit {
   border: none;
   border-radius: 3px;
   color: #ffff;
-  font-size: 0.875rem;
+  font-size: 14px;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.8rem;
-  margin-bottom: 1.875rem;
+  padding: 12px;
 }
 
 .c-awwfood-rising-sun-form__copy {
-  font-size: 0.625rem;
+  font-size: 10px;
 }
 
 .c-awwfood-rising-sun-form__tandc {
@@ -2488,7 +2484,7 @@ button.c-gourmettraveller-successful-rising-sun__submit {
   justify-content: center;
   max-width: 50%;
   margin: 0 auto;
-  padding: 3.125rem;
+  padding: 20px;
 }
 
 .c-awwfood-successful-rising-sun__overlay {
